# fortnitepy

./: .gitignore  pyproject.toml  setup.py
docs/: conf.py
docs/localexts/: attributetable.py  viewcode.py
examples/: basic_bot.py  discord_integration.py  multiple_clients.py  multiple_sub_clients.py  subclass_client.py
examples/api_integrations/: ben_bot.py  fortnite_api.py
examples/web/: sanic_integration.py
fortnitepy/: __init__.py  auth.py  avatar.py  client.py  code.py  creative.py  enums.py  errors.py  friend.py  http.py  lego.py  message.py  news.py  party.py  playlist.py  presence.py  profile.py  sac.py  shop.py  stats.py  store.py  typedefs.py  user.py  utils.py  xmpp.py
fortnitepy/ext/commands/: __init__.py  bot.py  cog.py  context.py  converter.py  cooldown.py  core.py  errors.py  help.py  typedefs.py  view.py
